--- a/package.json
+++ b/package.json
@@ -2,14 +2,27 @@
   "name": "rtmp-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "type": "commonjs",
   "scripts": {
-    "start": "node main.js"
+    "dev": "ts-node-dev --respawn --transpile-only main.ts",
+    "start": "ts-node main.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
-    "node-media-server": "^2.4.1"
+    "express": "^4.18.1",
+    "node-media-server": "^2.4.1",
+    "ts-node": "^10.9.1"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/mkdirp": "^1.0.2",
+    "@types/node-media-server": "^2.3.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.7.4"
   }
 }
