--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "mkdirp": "^1.0.4",
     "node-media-server": "^2.4.1",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/mkdirp": "^1.0.2",
